--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,20 @@
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/BOOK_REPO
-spring.datasource.username=root
-spring.datasource.password=Santosh@123
-spring.jpa.show-sql =true
-spring.jpa,hibernate.ddl.auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/BOOK_REPO
+#spring.datasource.username=root
+#spring.datasource.password=Santosh@123
+#spring.jpa.show-sql =true
+#spring.jpa,hibernate.ddl.auto = update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 server.port=9092
+
+spring.datasource.url=jdbc:h2:mem:bookdb
+#spring.datasource.url=jdbc:h2:file:/data/userdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=true
+
+spring.flyway.baselineOnMigrate = true
+spring.flyway.locations=classpath:db.migration
